--- a/FrontEnd/templates/FrontEnd/course/course_list.html
+++ b/FrontEnd/templates/FrontEnd/course/course_list.html
@@ -42,11 +42,13 @@
 
     <div class="container">
         <div class="box" v-for="classbox in filteredList" v-bind:class="classbox.typecss">
+            <img class="coursephoto" v-bind:src="'{{MEDIA_URL}}'+classbox.image" v-bind:alt="classbox.image" />
+            <div class="classdate">${classbox.update_date}</div>
+
             <div class="markbox">
                 <p class="amark">${classbox.type}</p>
             </div>
-            <img class="coursephoto" v-bind:src="'{{MEDIA_URL}}'+classbox.image" v-bind:alt="classbox.image" />
-            <div class="classdate">${classbox.update_date}</div>
+
             <div class="classtitle">${classbox.title}</div>
             <div class="classcontent" v-html="classbox.content"> </div>
         </div>
@@ -72,9 +74,9 @@
                     let getdata = response.data.datalist;
                     for (let i = 0; i < getdata.length; i++) {
                         if (getdata[i].type == "專業")
-                            getdata[i]["typecss"] = 'color-1';
+                            getdata[i]["typecss"] = 'coursecolor-1';
                         else
-                            getdata[i]["typecss"] = 'color-2';
+                            getdata[i]["typecss"] = 'coursecolor-2';
                     }
                     console.log(getdata)
                     this.classbox = getdata;
