--- a/FrontEnd/templates/FrontEnd/download/download.html
+++ b/FrontEnd/templates/FrontEnd/download/download.html
@@ -5,6 +5,8 @@
 {% load static%}
 <link rel="stylesheet" href="{% static 'css/download/download.css' %}">
 <link rel="stylesheet" href="{% static 'bootstrap-4.6.1/dist/css/bootstrap.min.css' %}">
+<script src="{% static 'js/vue.js' %}"> </script>
+<script src="{% static 'js/axios.min.js' %}"> </script>
 
 {% endblock %}
 
