--- a/FrontEnd/templates/FrontEnd/base/nav.html
+++ b/FrontEnd/templates/FrontEnd/base/nav.html
@@ -13,7 +13,7 @@
                         大勵客基地
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                        <a class="dropdown-item" href="#">召集人</a>
+                        <a class="dropdown-item" href="{%url 'classshow' 6 %}">召集人</a>
                         <a class="dropdown-item" href="{%url 'members_intro' %}">成員</a>
                         <a class="dropdown-item" href="{%url 'position' %}">位置</a>
                     </div>
